@@ -21,17 +21,33 @@
 #include <curses.h>
 #include <errno.h>
 #include <bsd_fcntl.h>
+#ifdef __solaris__
+# define _XPG7
+# undef __EXTENSIONS__
+# define __EXTENSIONS__
+# include <sys/procset.h>
+#endif /* ifdef __solaris__ */
 #include <poll.h>
 #include <signal.h>
 #include <stdio.h>
 #include <bsd_stdlib.h>
 #include <bsd_string.h>
+
+#if defined(__solaris__)
+# define __EXTENSIONS__
+# include <termios.h>
+# include <sys/termios.h>
+#endif /* if defined(__solaris__) */
+
 #include <bsd_termios.h>
 #if defined(__GNU_LIBRARY__) && defined(__GLIBC_PREREQ)
 # include <termio.h>
 #endif /* if defined(__GNU_LIBRARY__) && defined(__GLIBC_PREREQ) */
 #include <bsd_unistd.h>
 
+#ifdef __solaris__
+# undef GS
+#endif /* ifdef __solaris__ */
 #include "../common/common.h"
 #include "../ex/script.h"
 #include "cl.h"
