@@ -34,6 +34,11 @@
 #ifndef _COMPAT_H_
 # define _COMPAT_H_
 
+# ifdef __solaris__
+#  undef _TIMESPEC_UTIL_H
+#  define _TIMESPEC_UTIL_H 1
+# endif /* ifdef __solaris__ */
+
 # ifdef _AIX
 #  include <sys/limits.h>
 # endif /* ifdef _AIX */
