@@ -1,4 +1,6 @@
-OpenVi 7.0.15 -> OpenVi 7.1.16: Thu Mar 10 9:13:27 2022
+OpenVi 7.0.15 -> OpenVi 7.1.16: Thu Mar 10 15:12:14 2022
+        + Add support for Solaris; tested on Oracle Solaris 11.4.0 with GCC,
+          Clang (V6+), and the Oracle Developer Studio V12.6 compiler.
         + Add support for illumos; tested on OpenIndiana Hipster 2022.03
         + Add support for NetBSD; tested on NetBSD/amd64 9.2-stable with
           the system provided GCC and Clang from binary packages; compiling
